Added Login and Singup page with modern UI

--- a/Frontend/react-app/src/App.css
+++ b/Frontend/react-app/src/App.css
@@ -8,3 +8,11 @@
   background:  #232528;;
 }
 
+.login-section {
+  background:  #232528;;
+}
+
+.signup-section {
+  margin-top: 30px;
+  background:  #232528;;
+}
