--- a/Frontend/react-app/src/styles/Home.css
+++ b/Frontend/react-app/src/styles/Home.css
@@ -12,6 +12,7 @@
 
 .main-container {
     display: flex;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     text-align: center;
