--- a/Frontend/react-app/src/App.css
+++ b/Frontend/react-app/src/App.css
@@ -16,3 +16,15 @@
   margin-top: 30px;
   background:  #232528;;
 }
+
+.blog-section {
+  width: 100%;
+  height: 100vh;
+  background-color: #282727;
+}
+
+.blogdetails-section {
+  width: 100%;
+  height: 100vh;
+  background-color: #282727;
+}
