--- a/Frontend/react-app/src/styles/Home.css
+++ b/Frontend/react-app/src/styles/Home.css
@@ -12,7 +12,8 @@
 
 .main-container {
     display: flex;
-    margin-top: 100px;
+    margin-top: 90px;
+    margin-bottom: 30px;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -21,10 +22,9 @@
     background: #2e2e2e; /* Dark gray background for container */
     border: 1px solid #3c3c3c; /* Slightly lighter border for subtle definition */
     box-shadow: 6px 6px 15px #1c1c1c, -6px -6px 8px #302f2f; /* Neumorphic shadow for dark theme */
-    height: 700px;
+    height: 680px;
     max-width: 600px;
     
-   /* Adjust as needed */
 }
 
 /* Optional: Add a hover effect to enhance the neumorphic look */
@@ -101,7 +101,7 @@
     cursor: pointer; /* Pointer cursor on hover */
     text-align: center; /* Center text */
     border-radius: 5px; /* Optional: Add border radius for rounded corners */
-    transition: background 0.3s ease; /* Smooth transition for
+    transition: background 0.3s ease; 
 }
 
 .btn:hover {
@@ -194,7 +194,7 @@
     border: 1px solid #3c3c3c; /* Slightly lighter border for subtle definition */
     box-shadow: 6px 6px 15px #1c1c1c, -6px -6px 8px #302f2f;
     width: 500px;
-    height: auto;
+    height: 300px;
     word-wrap: break-word; /* Ensures words break if necessary */
     white-space: normal; /* Allows multiple lines */
     overflow: auto; 
